GUI: Small fix (css, layout issue)

--- a/gui/public/themes/default/css/imscp.css
+++ b/gui/public/themes/default/css/imscp.css
@@ -588,7 +588,7 @@ textarea:focus {
    /* white-space: nowrap;*/
     border-top: 1px solid rgb(223,223,223);
     border-bottom: 1px solid rgb(223,223,223);
-	height: 40px;
+	height: 24px;
 }
 
 fieldset {
